# injected-virtual-file-system

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.toml  config_dummy.toml  meta.json
.cargo/: config.toml
.config/: nextest.toml
agent/: Cargo.toml
agent/src/: lib.rs
demo/: Cargo.toml
demo/examples/: dummy.rs  proxy.rs
hooks/: Cargo.toml
hooks/src/: extension_traits.rs  lib.rs  log.rs  raw_ptr.rs  virtual_paths.rs
hooks/src/virtual_paths/: mod.rs  windows.rs
hooks/src/windows/: fs.rs  function_targets.rs  handles.rs  mod.rs
hooks/src/windows/helpers/: handles.rs  mod.rs  object_attributes.rs  paths.rs  std_reference.rs  unhooked_fs.rs  unicode_string.rs
hooks/src/windows/os_types/: handles.rs  mod.rs  object_attributes.rs  paths.rs  unicode_string.rs
hooks/src/windows/patches/: create_delete_directory.rs  file_attributes.rs  file_edit.rs  find_first_file.rs  get_file_attributes.rs  mod.rs  nt_close.rs  nt_create_file.rs  nt_open_file.rs  nt_query_directory_file.rs  nt_query_information_by_name.rs  nt_query_object.rs  private_profile_strings.rs
hooks/src/windows/patches/unused/: find_first_file.rs  mod.rs  nt_query_object.rs
injector/: Cargo.toml  build.rs
injector/src/: config.rs  ipc.rs  lib.rs  main.rs  tracing.rs
integration/: Cargo.toml
integration/assets/: config.toml  java-fs-demo-config.toml
integration/shared/: Cargo.toml
integration/shared/src/: lib.rs  output.rs  test_harness.rs
integration/tests/windows/: create_remove_directory.rs  file_edit.rs  find_first_file.rs  main.rs  nt_create.rs  nt_open.rs  nt_query_directory_file.rs
integration/tests/windows/common/: mod.rs  test_harness.rs
integration/tests/windows/java/: mod.rs
integration/windows/: Cargo.toml
integration/windows/tests/: create_remove_directory.rs  file_edit.rs  find_first_file.rs  main.rs  nt_create.rs  nt_open.rs  nt_query_directory_file.rs  overlay.rs
integration/windows/tests/common/: mod.rs
integration/windows/tests/java/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/windows/: mod.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs  test_collector.rs
proc-macros/src/windows/: mod.rs  output.rs
schemas/: cargo_nightly.json
shared-types/: Cargo.toml
shared-types/src/: config.rs  errors.rs  lib.rs  message.rs  unsafe_types.rs
shared-types/src/config/: hook.rs  injector.rs  mod.rs
virtual-path-db/: Cargo.toml
virtual-path-db/src/: file_node.rs  file_path.rs  lib.rs  with_as_encoded_bytes.rs
