[workspace]
members = ["agent", "demo", "hooks", "injector", "macros", "shared-types"]
resolver = "3"

[workspace.metadata]
name = "usvfs-rust"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["AtlanticAccent <iain@laird.org>"]

[workspace.dependencies]
# Internal
agent = { path = "agent" }
hooks = { path = "hooks" }
macros = { path = "macros" }
shared-types = { path = "shared-types" }

# External
crabtime = { git = "https://github.com/wdanilo/crabtime.git", branch = "main" }
frida = { version = "0.16.10", features = ["auto-download"] }
frida-gum = { version = "0.16.10", features = [
  "auto-download",
  "libc",
  "module-names",
  "script",
  "std",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
interprocess = "2.2.3"
ref-cast = "1.0.24"
win-api = { package = "windows", version = "0.61", features = [
  "Wdk_Foundation",
  "Wdk_Storage",
  "Wdk_Storage_FileSystem",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_IO",
] }
win-types = { package = "windows-core", version = "0.61" }
windows-strings = "0.4.2"
windows-version = "0.1.4"
