[workspace]
members = [
  "agent",
  "integration",
  "hooks",
  "injector",
  "shared-types",
  "proc-macros",
]
resolver = "3"

[workspace.metadata]
name = "usvfs-rust"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["AtlanticAccent <iain@laird.org>"]

[workspace.dependencies]
# Internal
agent = { path = "agent" }
hooks = { path = "hooks" }
shared-types = { path = "shared-types" }
injector = { path = "injector" }
proc-macros = { path = "proc-macros" }

# External
crabtime = { git = "https://github.com/wdanilo/crabtime.git", branch = "main" }
frida = { git = "https://github.com/atlanticaccent/frida-rust.git", branch = "add-device-output-listener", features = [
  "auto-download",
] }
frida-sys = { git = "https://github.com/atlanticaccent/frida-rust.git", branch = "add-device-output-listener", features = [
  "auto-download",
] }
frida-gum = { git = "https://github.com/atlanticaccent/frida-rust.git", branch = "add-device-output-listener", features = [
  "auto-download",
  "libc",
  "module-names",
  "script",
  "std",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
interprocess = { version = "2.2.3", features = ["tokio"] }
ref-cast = "1.0.24"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
bincode = "2.0.1"
clap = { version = "4.5.39", features = ["derive"] }

# Windows specific
widestring = "1.2.0"
win-api = { package = "windows", version = "0.61", features = [
  "Wdk_Foundation",
  "Wdk_System",
  "Wdk_System_SystemServices",
  "Wdk_Storage",
  "Wdk_Storage_FileSystem",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_IO",
] }
win-types = { package = "windows-core", version = "0.61" }
windows-strings = "0.4.2"
windows-version = "0.1.4"
