[package]
name = "hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Internal
proc-macros = { workspace = true }
shared-types = { workspace = true }

# External
frida-gum = { workspace = true }
interprocess = { workspace = true }
dashmap = "6.1.0"
ext-trait = { workspace = true }
crossbeam-queue = "0.3.12"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.5"
ref-cast = { workspace = true }
widestring = { workspace = true }
win-api = { workspace = true }
win-types = { workspace = true }
windows-strings = { workspace = true }
windows-version = { workspace = true }
windows-link = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }

[lints]
workspace = true
