[package]
name = "injector"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Internal
agent = { workspace = true }
shared-types = { workspace = true }

# External
frida = { workspace = true }
interprocess = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
