#:schema ../json_schemas/cargo_nightly.json

[package]
name = "injector"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-run = "injector"

[features]
testing-no-embed = []

[dependencies]
# Internal
agent = { path = "../agent", artifact = "cdylib" }
shared-types = { workspace = true }

# External
clap = { workspace = true, features = ["derive"] }
frida = { workspace = true }
interprocess = { workspace = true }
tokio = { workspace = true, features = ["time", "signal"] }
sysinfo = { version = "0.35.2", default-features = false, features = [
  "system",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
