#:schema ../json_schemas/cargo_nightly.json

[package]
name = "integration"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[test]]
name = "windows"
path = "tests/windows/main.rs"
required-features = ["injector/testing-no-embed"]
harness = false

[dependencies]
injector = { path = "../injector", features = [
  "testing-no-embed",
], artifact = "bin" }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
proc-macros = { workspace = true }

tempdir = "0.3.7"
shared-types = { workspace = true }
toml = { workspace = true }
linkme = "0.3.33"
libtest-mimic = "0.8.1"

[target.'cfg(windows)'.dependencies]
widestring = { workspace = true }
win-api = { workspace = true }
windows-strings = { workspace = true }
