[package]
name = "shared-types"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bincode = "2.0.1"
thiserror = { workspace = true }
frida-gum = { workspace = true }
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.'cfg(windows)'.dependencies]
win-api = { workspace = true }
