[package]
name = "shared-types"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
frida-gum = { workspace = true }
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
serde_json = "1.0.140"
toml = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }

[target.'cfg(windows)'.dependencies]
win-api = { workspace = true }
