#:schema ../json_schemas/cargo_nightly.json

[package]
name = "integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
autotests = false

[[test]]
name = "windows"
path = "tests/main.rs"
required-features = ["injector/testing-no-embed"]
harness = false

[dependencies]
clap = { workspace = true, default-features = false, features = ["derive"] }
integration-shared = { path = "../shared", artifact = "bin", lib = true }

[dev-dependencies]
injector = { path = "../../injector", features = [
  "testing-no-embed",
], artifact = "bin" }
proc-macros = { workspace = true }

tempdir = { workspace = true }
shared-types = { workspace = true }
toml = { workspace = true }
linkme = "0.3.33"
libtest-mimic = "0.8.1"

[target.'cfg(windows)'.dependencies]
widestring = { workspace = true }
win-api = { workspace = true }
windows-strings = { workspace = true }
